# NeoDiff

./: .gitignore  .gitmodules  EVMDiffGenerator.py  EVMFuzz.py  EVMrun.sh  EVMscale.sh  LICENSE  NeoSemanticDiffFuzzer.py  NeoVMFuzz.py  README.md  analyze_data.py  fuzz.py  neo-python-VM.afl.py  neo-python-VM.py  requirements.txt  setup.sh
libafl/: .gitignore  Cargo.toml  README.md
libafl/src/: main.rs
neodiff/: EVMDiffGenerator.py  NeoDiff.py  NeoPyDiffGenerator.py  NeoVmDiffGenerator.py  PyDiffGenerator.py
utils/: EVMrun.sh  EVMscale.sh  EV_Mkill.sh  analyze_data.py  neo-python-VM.afl.py  neo-python-VM.py  parse_results.py
